--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "around-the-bend.doc.tar.xz": 9ebac22ce3758a7a90de3260cf41262eb41dadf9
-  "around-the-bend.tar.xz": e6cc3ba4eaedb10117b20d3c4176aaf8e904ee9a
+  around-the-bend.doc.tar.xz: 273a7839596949ebe5ec3a5ffd01526be29a6b13
+  around-the-bend.tar.xz: 28b50e970a22b5cc58fc8d458f159533b89a03fa
